fix(*): fix spacing

--- a/src/css/components/body.css
+++ b/src/css/components/body.css
@@ -31,7 +31,7 @@ body > header {
     justify-content: space-between;
     background-color: white;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-    padding: 0 1rem 1rem;
+    padding: 0 1rem 0.5rem;
     position: sticky;
     top: 0;
     z-index: 3;
